přidání prvního odstavce

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
     <h2>Trčka</h2>
+    <p>Lorem ipsum dolor sit
+        amet consectetur, adipisicing elit. Quibusdam nostrum officia quaerat earum blanditiis, voluptatum natus
+        voluptates iusto debitis molestias cum eaque mollitia. Itaque, sed
+        eveniet obcaecati tempore iste asperiores?</p>
 </body>
 </html>
