přidání druheho odstavce1~

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
         amet consectetur, adipisicing elit. Quibusdam nostrum officia quaerat earum blanditiis, voluptatum natus
         voluptates iusto debitis molestias cum eaque mollitia. Itaque, sed
         eveniet obcaecati tempore iste asperiores?</p>
+    <p>Lorem ipsum dolor sit
+        amet consectetur, adipisicing elit. Quibusdam nostrum officia quaerat earum blanditiis, voluptatum natus
+        voluptates iusto debitis molestias cum eaque mollitia. Itaque, sed
+        eveniet obcaecati tempore iste asperiores?</p>
 </body>
 </html>
